Trying to fix scroll jump on mobile. testing setting background image to fixed size

--- a/portfolio.css
+++ b/portfolio.css
@@ -74,16 +74,13 @@ header {
   z-index: 1;
   min-height: 100vh;
   max-height: 100vh;
-  max-width: 100%;
   margin-right: auto;
   margin-left: auto; 
-  background-attachment: scroll;
-  overflow: hidden;
-  
+  background-size: cover;
+  will-change: transform;  
 
   background: -webkit-linear-gradient(273deg, rgba(20,41,62,0.99), #f05d5e);
   
-
   background: linear-gradient(177deg, rgba(20,41,62,0.99), #f05d5e);
   background-size: 200% 200%;
   -webkit-animation: header 30s ease infinite;
@@ -103,7 +100,7 @@ header {
 }
 
 header img {  
-  top: 2em;
+/*   top: 10%; */
   max-height: 300px;
   max-width: 300px;
   margin-right: auto;
@@ -419,7 +416,7 @@ header img {
   padding-left: 0px !important;
   padding-right: 0px !important;
   background-image: url("images/main-background.jpg");
-  background-size: cover;
+  background-size: 2500px;
   background-attachment: fixed;
   z-index: 200;
   overflow: hidden;
@@ -464,10 +461,10 @@ header img {
     .about-me div h1 {
       font-size: 7rem;
     }
-/*     div .threejs-image{
+    div .threejs-image{
       position: absolute;
       transform: translate(-50%, 30%);
-    } */
+    }
 }
 
 /***************** threejs section *****************/
